tests/NormalTests/paczka2/big_fuzzy/49520071.err
Error in line 2: qOc A907 17,7
Error in line 5: qOc A794 19,8
Error in line 18: qOc S724 33,2
Error in line 17: ZKV3R1s S724 66,5
Error in line 22: ZKV3R1s A907 47,8
Error in line 30: XNoM A794 -1,0
Error in line 32: sWw1rsE5K S724 37,4
Error in line 37: sWw1rsE5K A907 12,9
Error in line 10: XNoM A794 33,8
Error in line 33: ZKV3R1s A794 260,4
Error in line 67: A154 S724 80,3
Error in line 70: A154 A794 62,3
Error in line 93: XNoM A907 54,0
Error in line 103: XNoM A154 60,3
Error in line 114: qOc A154 -1,3
Error in line 111: sWw1rsE5K A154 33,9
Error in line 117: sWw1rsE5K A794 61,7
Error in line 122: sWw1rsE5K A907 2,8
Error in line 129: qOc A907 9,67
Error in line 113: qOc A154 74,0
Error in line 131: FrE A907 88,1
Error in line 112: ZKV3R1s A907 321,1
Error in line 115: XNoM A907 176,7
Error in line 148: sWw1rsE5K S724 14,9
Error in line 151: sWw1rsE5K A154 74,5
Error in line 165: FrE A794 93,9
Error in line 158: ZKV3R1s A907 72,0
Error in line 167: sWw1rsE5K A907 58,2
Error in line 172: sWw1rsE5K A154 46,1
Error in line 198: vtx3pl51 A794 394,4
Error in line 199: sWw1rsE5K A154 45,1
Error in line 204: sWw1rsE5K A794 19,5
Error in line 197: qOc A794 178,9
Error in line 220: qOc A907 39,3
Error in line 240: qOc S724 73,0
